arregle problema importacion, se sigue usando metodo antiguo

--- a/vite-project/src/components/PagsAprendamos/comoMeSiento/stylesAccordion.css
+++ b/vite-project/src/components/PagsAprendamos/comoMeSiento/stylesAccordion.css
@@ -25,7 +25,7 @@
   }
   
   .background{
-    background-image: url(./comomesiento2.png);
+    background-image: url(./pic/comomesiento2.png);
     background-size: cover;
     background-position: center;
     overflow-y: visible;
