--- a/vite-project/src/components/PagNavFooter/footer.css
+++ b/vite-project/src/components/PagNavFooter/footer.css
@@ -5,7 +5,18 @@
     margin-left: 0;
     margin-right: 20px;
     font-family: manrope;
+   
 }
+
+/* si se quiere cambiar el color del footer es aqui, abajo hay un efecto vidrio que se veria bonito 
+encima de los fondos de pantalla de las paginas, pero habria que cambiar el color de la letra */
+/* .bg-secondary {
+  
+  background: rgba(255, 255, 255, 0.3) !important;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  border: 1.5px solid rgba(209, 213, 219, 0.3);
+} */
 
 .custom-btn-width {
 width: 200px;
