--- a/vite-project/src/views/admin/Cat.css
+++ b/vite-project/src/views/admin/Cat.css
@@ -1,3 +1,12 @@
+
+
+.altura-min-admin {
+    min-height: 100vh; 
+    min-width: 85vw;
+    justify-content: center;
+    display: flex;
+}
+
 .contenedor {
     display: flex;
     flex-direction: row; /* Para que los elementos se coloquen uno al lado del otro */
@@ -15,4 +24,4 @@
 .botones {
     flex: 1 1 auto; /* Para que los Botones ocupen el espacio restante */
     /* Puedes añadir estilos adicionales según tus necesidades */
-}
+}            
