--- a/vite-project/src/components/PagsAprendamos/comoMeSiento/stylesAccordion.css
+++ b/vite-project/src/components/PagsAprendamos/comoMeSiento/stylesAccordion.css
@@ -63,11 +63,12 @@
   
   }
   
-  .card {
+  .efecto-vidrio {
     background: rgba(255, 255, 255, 0.3);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     border: 1.5px solid rgba(209, 213, 219, 0.3);
+    border-radius: 8px;
    }
   
   .image-accordion-item:hover {
