--- a/vite-project/src/components/PagsAprendamos/higieneSueño/sueño.css
+++ b/vite-project/src/components/PagsAprendamos/higieneSueño/sueño.css
@@ -19,7 +19,7 @@
     background-repeat: no-repeat;
 }
 
-.container {
+.container-sueño {
     display: flex;
     flex-direction: column;
     align-items: center;
