pag iniciar sesion sin js, faltan detalles

--- a/vite-project/src/components/PagNavFooter/Navbar.css
+++ b/vite-project/src/components/PagNavFooter/Navbar.css
@@ -63,7 +63,7 @@
 
 /* Estilo de degradado para el navbar */
 .navbar-color {
-    background-image: linear-gradient(to right, #E4A9BF, #CFE6DD, #A3C9CA);
+    background-image: linear-gradient(to right, #E4A9BF, #fce6fc, #A3C9CA);
     /* Degradado de tres colores pasteles */
 }
 
