--- a/vite-project/src/juego/style2.css
+++ b/vite-project/src/juego/style2.css
@@ -31,11 +31,11 @@ body {
     background-color: #2980b9;
 }
 
-body {
+/* body {
     margin: 0; 
     overflow: hidden; 
     font-family: Arial, sans-serif;
-}
+} */
 #question-container {
     position: absolute;
     top: 50%;
