--- a/vite-project/src/components/PagNavFooter/Navbar.css
+++ b/vite-project/src/components/PagNavFooter/Navbar.css
@@ -18,17 +18,19 @@
     /* Color del texto */
 }
 
-.btn-invitado:hover{
-  background-color: #fca0dc;
-    /* Color de fondo */
+.btn-invitado:hover,
+.btn-invitado:active{
+  background-color: #fca0dc!important;
+    /* Color de fondo, necesita important por el active*/
     border-color: #E6D4CF;
     /* Color del borde */
     color: #000000;
     /* Color del texto */
 }
 
-.btn-registrarse:hover{
-  background-color: #d09def;
+.btn-registrarse:hover,
+.btn-registrarse:active{
+  background-color: #d09def!important;
     /* Color de fondo */
     border-color: #DDCFE6;
     /* Color del borde */
@@ -67,6 +69,10 @@
     /* Degradado de tres colores pasteles */
 }
 
+.dropdown-item:focus {
+    background-color: #fce6fc; /* Cambia 'your-desired-color' por el color que prefieras */
+    color: black
+}
 
 
 
