--- a/vite-project/src/components/PagsAprendamos/saludFisica/SaludFisica.css
+++ b/vite-project/src/components/PagsAprendamos/saludFisica/SaludFisica.css
@@ -1,8 +1,9 @@
 .card-salud {
     position: relative;
     width: 800px;
-    height: 650px;
+    height: 700px;
     margin: 20px;
+    margin-bottom: 50px;
 }
 
 .card-salud .face {
@@ -12,7 +13,7 @@
     backface-visibility: hidden;
     border-radius: 10px;
     overflow: hidden;
-    transition: .5s;
+    transition: 1.5s;
 }
 
 .card-salud .front {
@@ -54,6 +55,7 @@
     border-top: solid 1px #f3f3f3;
     height: 50px;
     line-height: 50px;
+    
 }
 
 .card-salud .back .link a {
@@ -62,7 +64,7 @@
 
 .card-salud .back h3 {
     font-size: 30px;
-    margin-top: 20px;
+    margin-top: 50px;
     letter-spacing: 2px;
 }
 
@@ -84,3 +86,28 @@
     height: 700px; 
     margin: 20px; 
 }
+
+.card-tittle {
+    margin-bottom: 10px;
+}
+
+.card.text {
+    margin-top: 0px;
+}
+
+ 
+.title-saludF {
+    position: relative;
+    z-index: 3;
+    text-align: center;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    padding: 40px; 
+    /* Añadido espacio interno al contenedor del título */
+  }
+  
+  .title-saludF h1 {
+    font-size: 48px;
+    color: #F3B6E0;
+    font-weight: 700;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
+  }
