creacion main2 para pruebas

--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,7 +1,7 @@
 
 /* De aqui para abajo era el css de react vite, no lo borro en caso de que nos sirva algo */
 
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200,300,400,500,600,700,800&display=swap');
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
